include(dynamixelTaskLib)
ADD_LIBRARY(${DYNAMIXEL_TASKLIB_NAME} SHARED 
    ${DYNAMIXEL_TASKLIB_SOURCES})


TARGET_LINK_LIBRARIES(${DYNAMIXEL_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${DYNAMIXEL_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${DYNAMIXEL_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${DYNAMIXEL_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${DYNAMIXEL_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${DYNAMIXEL_TASKLIB_HEADERS}
    DESTINATION include/orocos/dynamixel)

